--- a/client/pizzacity/public/index.html
+++ b/client/pizzacity/public/index.html
@@ -55,6 +55,10 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
     <script
+      src="https://apps.elfsight.com/p/platform.js"
+      defer
+    ></script>
+    <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
       crossorigin="anonymous"
