--- a/client/pizzacity/public/index.html
+++ b/client/pizzacity/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="https://user-images.githubusercontent.com/99539536/206849320-991e8456-e490-4758-a47c-3d1d1d8c156a.jpg" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1"
@@ -37,7 +37,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css"
     />
-    <title>React App</title>
+    <title>Pizza City Pizzeria | Cafe</title>
   </head>
   <body>
     <noscript
