--- a/client/pizzacity/public/index.html
+++ b/client/pizzacity/public/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="https://user-images.githubusercontent.com/99539536/206849320-991e8456-e490-4758-a47c-3d1d1d8c156a.jpg" />
+    <link
+      rel="icon"
+      href="https://user-images.githubusercontent.com/99539536/206849320-991e8456-e490-4758-a47c-3d1d1d8c156a.jpg"
+    />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1"
@@ -63,6 +66,7 @@
       integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
       crossorigin="anonymous"
     ></script>
+
     <script src="https://api.mapbox.com/mapbox-gl-js/v2.1.1/mapbox-gl.js"></script>
   </body>
 </html>
