--- a/client/pizzacity/public/index.html
+++ b/client/pizzacity/public/index.html
@@ -41,6 +41,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css"
     />
     <title>Pizza City Pizzeria | Cafe</title>
+    <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
   </head>
   <body>
     <noscript
@@ -61,12 +62,21 @@
       src="https://apps.elfsight.com/p/platform.js"
       defer
     ></script>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
       crossorigin="anonymous"
     ></script>
+    <script>
+      $(function () {
+        var navMain = $('.navbar-collapse');
 
+        navMain.on('click', 'a', null, function () {
+          navMain.collapse('hide');
+        });
+      });
+    </script>
     <script src="https://api.mapbox.com/mapbox-gl-js/v2.1.1/mapbox-gl.js"></script>
   </body>
 </html>
