--- a/client/pizzacity/public/index.html
+++ b/client/pizzacity/public/index.html
@@ -15,12 +15,18 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link
+      rel="apple-touch-icon"
+      href="https://user-images.githubusercontent.com/99539536/206849320-991e8456-e490-4758-a47c-3d1d1d8c156a.jpg"
+    />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link
+      rel="manifest"
+      href="https://user-images.githubusercontent.com/99539536/206849320-991e8456-e490-4758-a47c-3d1d1d8c156a.jpg"
+    />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
