--- a/client/pizzacity/public/index.html
+++ b/client/pizzacity/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link
-      rel="icon"
+      rel="cafe icon"
       href="https://user-images.githubusercontent.com/99539536/206849320-991e8456-e490-4758-a47c-3d1d1d8c156a.jpg"
     />
     <meta
@@ -13,29 +13,18 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="The Pizza City is restaurants based website which cover all details about our cafe"
     />
     <link
-      rel="apple-touch-icon"
+      rel="cafe icon"
       href="https://user-images.githubusercontent.com/99539536/206849320-991e8456-e490-4758-a47c-3d1d1d8c156a.jpg"
     />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
+ 
     <link
-      rel="manifest"
+      rel="cafe icon"
       href="https://user-images.githubusercontent.com/99539536/206849320-991e8456-e490-4758-a47c-3d1d1d8c156a.jpg"
     />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
+  
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -46,7 +35,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css"
     />
-    <title>Pizza City Pizzeria | Cafe</title>
+    <title>The Pizza City | Pizzeria | Cafe</title>
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
   </head>
   <body>
