--- a/client/pizzacity/public/index.html
+++ b/client/pizzacity/public/index.html
@@ -6,6 +6,7 @@
       rel="cafe icon"
       href="https://user-images.githubusercontent.com/99539536/206849320-991e8456-e490-4758-a47c-3d1d1d8c156a.jpg"
     />
+    <meta name="google-site-verification" content="ml287CfGW0r1XMKu_5SqhSEjuVn6uj60-8UR7Cw86os" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1"
