--- a/client/pizzacity/public/index.html
+++ b/client/pizzacity/public/index.html
@@ -16,6 +16,10 @@
       name="description"
       content="The Pizza City is restaurants based website which cover all details about our cafe"
     />
+
+        <meta name="keywords" content="thepizzacity.com the pizza city cafe good food parbhani"/>
+        <meta name="author" content="Ankush Balatkar"/>
+        <meta name="publisher" content="The Pizza City"/>
     <link
       rel="cafe icon"
       href="https://user-images.githubusercontent.com/99539536/206849320-991e8456-e490-4758-a47c-3d1d1d8c156a.jpg"
@@ -54,17 +58,17 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <script
+    <script defer
       src="https://apps.elfsight.com/p/platform.js"
-      defer
+      
     ></script>
 
-    <script
+    <script defer
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
       crossorigin="anonymous"
     ></script>
-    <script>
+    <script defer>
       $(function () {
         var navMain = $('.navbar-collapse');
 
@@ -73,6 +77,6 @@
         });
       });
     </script>
-    <script src="https://api.mapbox.com/mapbox-gl-js/v2.1.1/mapbox-gl.js"></script>
+    <script defer src="https://api.mapbox.com/mapbox-gl-js/v2.1.1/mapbox-gl.js"></script>
   </body>
 </html>
